Updated code after config dict and brdf viewing refactoring

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -236,7 +236,7 @@
     "eradiate.kernel.set_variant(\"scalar_mono_double\")\n",
     "from eradiate.kernel.core import ScalarTransform4f\n",
     "\n",
-    "scene_dict = {\n",
+    "kernel_dict = {\n",
     "    \"type\": \"scene\",\n",
     "    \n",
     "    # Flat rectangular diffuse surface with reflectance of 0.5\n",
@@ -312,10 +312,10 @@
     "    # Volumetric path tracer (no multiple importance sampling)\n",
     "    \"integrator\": {\"type\": \"volpath\"}\n",
     "}\n",
-    "#display(scene_dict)\n",
+    "#display(kernel_dict)\n",
     "\n",
     "from eradiate.kernel.core.xml import load_dict\n",
-    "scene = load_dict(scene_dict)"
+    "scene = load_dict(kernel_dict)"
    ]
   },
   {
@@ -348,11 +348,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_dict[\"measure\"][\"sampler\"][\"sample_count\"] = 512\n",
-    "scene_dict[\"measure\"][\"film\"][\"height\"] = scene_dict[\"measure\"][\"film\"][\"width\"] = 256\n",
+    "kernel_dict[\"measure\"][\"sampler\"][\"sample_count\"] = 512\n",
+    "kernel_dict[\"measure\"][\"film\"][\"height\"] = kernel_dict[\"measure\"][\"film\"][\"width\"] = 256\n",
     "\n",
     "\n",
-    "scene_dict[\"floating_sphere\"] = {\n",
+    "kernel_dict[\"floating_sphere\"] = {\n",
     "    \"type\": \"sphere\", \n",
     "    \"radius\": 25,\n",
     "    \"center\": [0, 0, 100],\n",
@@ -364,7 +364,7 @@
     "        }\n",
     "    }\n",
     "}\n",
-    "scene = load_dict(scene_dict)\n",
+    "scene = load_dict(kernel_dict)\n",
     "render(scene)\n",
     "plt.figure(figsize=(8,6))\n",
     "plot(scene)"
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_dict.pop(\"floating_sphere\", None)\n",
+    "kernel_dict.pop(\"floating_sphere\", None)\n",
     "\n",
     "n_spheres = 24\n",
     "angles = np.linspace(0, 2. * np.pi, n_spheres, endpoint=False)\n",
@@ -400,7 +400,7 @@
     "reflectances = (list(reflectances_fwd) + list(reflectances_bwd)) * int(n_spheres/cycle)\n",
     " \n",
     "for i, (angle, reflectance) in enumerate(zip(angles, reflectances)):\n",
-    "    scene_dict[f\"floating_sphere_{i}\"] = {\n",
+    "    kernel_dict[f\"floating_sphere_{i}\"] = {\n",
     "        \"type\": \"sphere\", \n",
     "        \"radius\": 7.5,\n",
     "        \"center\": [75. * np.cos(angle), 75. * np.sin(angle), 50],\n",
@@ -412,7 +412,7 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "scene = load_dict(scene_dict)\n",
+    "scene = load_dict(kernel_dict)\n",
     "render(scene)\n",
     "plt.figure(figsize=(8,6))\n",
     "plot(scene)"
@@ -447,10 +447,10 @@
     "import eradiate.kernel\n",
     "eradiate.kernel.set_variant(\"scalar_mono_double\")\n",
     "\n",
-    "from eradiate.scenes import SceneDict\n",
-    "scene_dict = SceneDict.empty()\n",
-    "print(f\"scene_dict.variant = {scene_dict.variant}\")\n",
-    "display(scene_dict)"
+    "from eradiate.scenes.core import KernelDict\n",
+    "kernel_dict = KernelDict.empty()\n",
+    "print(f\"kernel_dict.variant = {kernel_dict.variant}\")\n",
+    "display(kernel_dict)"
    ]
   },
   {
@@ -468,11 +468,11 @@
    },
    "outputs": [],
    "source": [
-    "from eradiate.scenes.lithosphere import Lambertian\n",
+    "from eradiate.scenes.lithosphere import LambertianSurface\n",
     "\n",
     "scene_horizontal_size = 200.  # km\n",
     "\n",
-    "surface = Lambertian({\n",
+    "surface = LambertianSurface({\n",
     "    \"reflectance\": 0.5,\n",
     "    \"width\": scene_horizontal_size,\n",
     "})\n",
@@ -512,8 +512,8 @@
    },
    "outputs": [],
    "source": [
-    "scene_dict.add(surface)\n",
-    "display(scene_dict)"
+    "kernel_dict.add(surface)\n",
+    "display(kernel_dict)"
    ]
   },
   {
@@ -529,15 +529,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eradiate.scenes.atmosphere import RayleighHomogeneous\n",
+    "from eradiate.scenes.atmosphere import RayleighHomogeneousAtmosphere\n",
     "\n",
-    "atmosphere = RayleighHomogeneous({\n",
+    "atmosphere = RayleighHomogeneousAtmosphere({\n",
     "    \"sigma_s\": 1e-2,  # km^-1\n",
     "    \"height\": 40.,  # km\n",
     "    \"width\": scene_horizontal_size  # km\n",
     "})\n",
     "\n",
-    "scene_dict.add(atmosphere)"
+    "kernel_dict.add(atmosphere)"
    ]
   },
   {
@@ -553,15 +553,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eradiate.scenes.illumination import Directional\n",
+    "from eradiate.scenes.illumination import DirectionalIllumination\n",
     "\n",
-    "illumination = Directional({\n",
+    "illumination = DirectionalIllumination({\n",
     "    \"zenith\": 30.,\n",
     "    \"azimuth\": 0.,\n",
     "    \"irradiance\": 1.8e+6  # W/km^2/nm\n",
     "})\n",
     "\n",
-    "scene_dict.add(illumination)"
+    "kernel_dict.add(illumination)"
    ]
   },
   {
@@ -577,9 +577,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eradiate.scenes.measure import Perspective\n",
+    "from eradiate.scenes.measure import PerspectiveCameraMeasure\n",
     "\n",
-    "scene_dict.add(Perspective({\n",
+    "kernel_dict.add(PerspectiveCameraMeasure({\n",
     "    \"target\": [0, 0, 0],\n",
     "    \"zenith\": 45.,\n",
     "    \"azimuth\": 90.,\n",
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_dict.add({\"integrator\": {\"type\": \"volpath\"}})"
+    "kernel_dict.add({\"integrator\": {\"type\": \"volpath\"}})"
    ]
   },
   {
@@ -618,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = scene_dict.load()\n",
+    "scene = kernel_dict.load()\n",
     "render(scene)\n",
     "plot(scene)"
    ]
@@ -636,22 +636,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_dict = SceneDict.empty().add([\n",
-    "    Lambertian({\n",
+    "kernel_dict = KernelDict.empty().add([\n",
+    "    LambertianSurface({\n",
     "        \"reflectance\": 0.5, \n",
     "        \"width\": 200\n",
     "    }),\n",
-    "    RayleighHomogeneous({\n",
+    "    RayleighHomogeneousAtmosphere({\n",
     "        \"sigma_s\": 1e-2,\n",
     "        \"height\": 40.,\n",
     "        \"width\": 200.\n",
     "    }),\n",
-    "    Directional({\n",
+    "    DirectionalIllumination({\n",
     "        \"zenith\": 30.,\n",
     "        \"azimuth\": 0.,\n",
     "        \"irradiance\": 1.8e+6\n",
     "    }),\n",
-    "    Perspective({\n",
+    "    PerspectiveCameraMeasure({\n",
     "        \"target\": [0, 0, 0],\n",
     "        \"zenith\": 45.,\n",
     "        \"azimuth\": 90.,\n",
@@ -676,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_dict_manual = {\n",
+    "kernel_dict_manual = {\n",
     "    \"type\": \"scene\",\n",
     "    \n",
     "    # Flat rectangular diffuse surface with reflectance of 0.5\n",
@@ -795,22 +795,22 @@
    "outputs": [],
    "source": [
     "from eradiate.solvers.onedim import OneDimSolver\n",
-    "from eradiate.scenes import SceneDict\n",
-    "from eradiate.scenes.lithosphere import Lambertian\n",
-    "from eradiate.scenes.atmosphere import RayleighHomogeneous\n",
-    "from eradiate.scenes.illumination import Directional\n",
+    "from eradiate.scenes.core import KernelDict\n",
+    "from eradiate.scenes.lithosphere import LambertianSurface\n",
+    "from eradiate.scenes.atmosphere import RayleighHomogeneousAtmosphere\n",
+    "from eradiate.scenes.illumination import DirectionalIllumination\n",
     "\n",
-    "runner = OneDimSolver(SceneDict.empty().add([\n",
-    "    Lambertian({\n",
+    "runner = OneDimSolver(KernelDict.empty().add([\n",
+    "    LambertianSurface({\n",
     "        \"reflectance\": 0.5, \n",
     "        \"width\": 200\n",
     "    }),\n",
-    "    RayleighHomogeneous({\n",
+    "    RayleighHomogeneousAtmosphere({\n",
     "        \"sigma_s\": 1e-2,\n",
     "        \"height\": 40.,\n",
     "        \"width\": 200.\n",
     "    }),\n",
-    "    Directional({\n",
+    "    DirectionalIllumination({\n",
     "        \"zenith\": 30.,\n",
     "        \"azimuth\": 0.,\n",
     "        \"irradiance\": 1.8e+6\n",
