--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(app.result)"
+    "display(app.results)"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app.plot(plot_type=\"hemispherical\")\n",
+    "app.results[\"lo\"].squeeze().ert.plot(kind=\"polar_pcolormesh\")\n",
     "\n",
     "# Hacky but only way to tune color bar without modifying the code\n",
     "import matplotlib.pyplot as plt\n",
@@ -180,7 +180,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app.plot(plot_type=\"pplane\")\n",
+    "from eradiate.util.view import pplane\n",
+    "\n",
+    "pplane_data = pplane(app.results[\"lo\"])\n",
+    "#display(pplane_data)\n",
+    "\n",
+    "pplane_data.plot()\n",
     "\n",
     "# Hacky but only way to tune axes without modifying the code\n",
     "import matplotlib.pyplot as plt\n",
