Updated and cleaned up demo files

--- a/demo_spr1/2-scene_construction/scene_construction.ipynb
+++ b/demo_spr1/2-scene_construction/scene_construction.ipynb
@@ -794,13 +794,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eradiate.solvers.onedim import OneDimSolver\n",
+    "from eradiate.solvers.onedim.runner import OneDimRunner\n",
     "from eradiate.scenes.core import KernelDict\n",
     "from eradiate.scenes.lithosphere import LambertianSurface\n",
     "from eradiate.scenes.atmosphere import RayleighHomogeneousAtmosphere\n",
     "from eradiate.scenes.illumination import DirectionalIllumination\n",
     "\n",
-    "runner = OneDimSolver(KernelDict.empty().add([\n",
+    "runner = OneDimRunner(KernelDict.empty().add([\n",
     "    LambertianSurface({\n",
     "        \"reflectance\": 0.5, \n",
     "        \"width\": 200\n",
