--- a/demo_spr1/4-bonus_rpv_atmosphere/bonus_rpv_atmo_demo.ipynb
+++ b/demo_spr1/4-bonus_rpv_atmosphere/bonus_rpv_atmo_demo.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# The rayleigh solver application\n",
-    "from eradiate.solvers.onedim import OneDimSolver\n",
+    "from eradiate.solvers.onedim.runner import OneDimRunner\n",
     "\n",
     "# Scene building facilities\n",
     "from eradiate.scenes.core import KernelDict\n",
@@ -115,7 +115,7 @@
     "for sigma in sigmas:\n",
     "    \n",
     "    # create the scene for each sigma value\n",
-    "    solver = OneDimSolver(KernelDict.empty().add([\n",
+    "    runner = OneDimRunner(KernelDict.empty().add([\n",
     "        RPVSurface({\n",
     "            \"rho_0\": 0.183,\n",
     "            \"k\": 0.780,\n",
@@ -140,7 +140,7 @@
     "    azimuth_grid = np.arange(0., 360.1, 10.)\n",
     "\n",
     "    # run the simulation and append the results to the results list\n",
-    "    results.append(solver.run(\n",
+    "    results.append(runner.run(\n",
     "        vza=zenith_grid, \n",
     "        vaa=azimuth_grid,\n",
     "        spp=2048\n",
