Updated bonus notebook to new scene construction infrastucture

--- a/demo_spr1/4-bonus_rpv_atmosphere/bonus_rpv_atmo_demo.ipynb
+++ b/demo_spr1/4-bonus_rpv_atmosphere/bonus_rpv_atmo_demo.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eradiate kernel and variant"
+    "### Setting Eradiate mode"
    ]
   },
   {
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import eradiate.kernel\n",
-    "eradiate.kernel.set_variant(\"scalar_mono_double\")"
+    "from eradiate import set_mode\n",
+    "eradiate.set_mode(\"mono\")"
    ]
   },
   {
@@ -130,7 +130,10 @@
     "        DirectionalIllumination({\n",
     "            \"zenith\": 30.,\n",
     "            \"azimuth\": 0.,\n",
-    "            \"irradiance\": 1.0e+6 # [W/km^2/nm]\n",
+    "            \"irradiance\": {\n",
+    "                \"type\": \"uniform\",\n",
+    "                \"value\": 1.0e+6\n",
+    "            }\n",
     "        }),\n",
     "        {\"integrator\": {\"type\": \"volpath\"}}\n",
     "    ]))\n",
@@ -190,13 +193,6 @@
     "axs[3].set_title(r\"$o_t = 2$\", y=1.1)\n",
     "axs[4].set_title(r\"$o_t = 4$\", y=1.1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
