--- a/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
+++ b/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
    "source": [
     ".. _tut-add_your_own_solar_irradiance_spectrum_dataset:"
    ]
