Proofread tutorial notebook on solar irradiance spectra

--- a/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
+++ b/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
@@ -10,17 +10,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Add your own solar irradiance spectrum dataset\n",
-    "This tutorial illustrates how to add your own solar irradiance spectrum dataset from a data file that includes wavelength and solar spectral irradiance values and use it within Eradiate.\n",
+    "This tutorial illustrates how to add your own solar irradiance spectrum dataset from a data file that includes wavelength and solar spectral irradiance values, and use it within Eradiate.\n",
     "<div class=\"alert alert-info\">\n",
     "\n",
     "This tutorial is for advanced users.\n",
     "\n",
     "</div>"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -30,15 +30,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Say your custom solar irradiance spectrum data is saved in a [commat-separated values file](https://en.wikipedia.org/wiki/Comma-separated_values) called `my_data.csv` with .\n",
+    "Say your custom solar irradiance spectrum data is saved in a [commat-separated values file](https://en.wikipedia.org/wiki/Comma-separated_values) called `my_data.csv` with wavelength values in the first column and solar spectral irradiance values in the second column.\n",
     "You would like to be able to use it within Eradiate.\n",
     "For that, you need to convert this `csv` file into a `netcdf` file with the right format for Eradiate.\n",
     "Here is how that can be achieved.\n",
     "First, we read our data into a `DataFrame` object from the [pandas](https://pandas.pydata.org/) library:"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1045,18 +1045,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Optional attributes\n",
     "\n",
     "If your data comes from observation, you may want to indicate the observation start date and end date in the dataset attributes.\n",
-    "This information is useful to indicate in what range of dates the dataset represents an accurate representation of the solar irradiance spectrum.\n",
+    "This information is useful to indicate in what range of dates the dataset can be considered as an accurate representation of the actual solar irradiance spectrum.\n",
     "Use the `obs_start` and `obs_end` attributes to indicate those dates.\n",
-    "Use the `url` attributes to indicate the url where the data can be downloaded.\n",
-    "Use the `comment` to add miscellaneous information.\n",
+    "If applicatble, use the `url` attributes to indicate the url where the raw data can be downloaded.\n",
+    "Use the `comment` attribute to add miscellaneous information, e.g. some processing that you performed on the raw data.\n",
     "Finally, you can create any other attribute that you wish, provided its name does not conflict with an existing attribute."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1504,12 +1504,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
+    "We are not done yet!\n",
     "To register your dataset in the list of available datasets of Eradiate, you must first save the dataset to a netcdf file.\n",
     "It is recommended to save the dataset in `$ERADIATE_DIR/resources/data/spectra/solar_irradiance`:"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
