--- a/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
+++ b/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
@@ -1051,7 +1051,7 @@
     "If your data comes from observation, you may want to indicate the observation start date and end date in the dataset attributes.\n",
     "This information is useful to indicate in what range of dates the dataset can be considered as an accurate representation of the actual solar irradiance spectrum.\n",
     "Use the `obs_start` and `obs_end` attributes to indicate those dates.\n",
-    "If applicatble, use the `url` attributes to indicate the url where the raw data can be downloaded.\n",
+    "If applicable, use the `url` attributes to indicate the url where the raw data can be downloaded.\n",
     "Use the `comment` attribute to add miscellaneous information, e.g. some processing that you performed on the raw data.\n",
     "Finally, you can create any other attribute that you wish, provided its name does not conflict with an existing attribute."
    ],
