Tutorial notebook subsection is not highlighted when clicked in docs

--- a/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
+++ b/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
@@ -1497,14 +1497,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Save the dataset to a netcdf file"
-   ]
-  },
-  {
-   "source": [
+    "## Save the dataset to a netcdf file\n",
+    "\n",
     "We are not done yet!\n",
     "To register your dataset in the list of available datasets of Eradiate, you must first save the dataset to a netcdf file.\n",
     "It is recommended to save the dataset in `$ERADIATE_DIR/resources/data/spectra/solar_irradiance`:"
@@ -1559,13 +1554,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Use your own solar irradiance spectrum dataset\n",
     "\n",
     "To use your own solar irradiance spectrum dataset, you must \"hack\" Eradiate's solar irradiance data getter and add the path to your dataset to the list of registered paths:"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
