Updated tutorial notebook for OneDimSolverApp

--- a/notebooks/tutorials/onedim_solver_app/onedim_solver_app.ipynb
+++ b/notebooks/tutorials/onedim_solver_app/onedim_solver_app.ipynb
@@ -98,12 +98,7 @@
     "    \"illumination\": {\n",
     "        \"type\": \"directional\",\n",
     "        \"zenith\": 30.,\n",
-    "        \"azimuth\": 0.,\n",
-    "        \"irradiance\": {\n",
-    "            \"type\": \"uniform\",\n",
-    "            \"value\": 1.8e+6,\n",
-    "            \"value_units\": \"W/km**2/nm\"\n",
-    "        },\n",
+    "        \"azimuth\": 0.\n",
     "    },\n",
     "    \"measures\": [{\n",
     "        \"type\": \"toa_hsphere\",\n",
