Fixed typo in tutorial notebook

--- a/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
+++ b/notebooks/tutorials/solar_irradiance_spectra/add_your_own_solar_irradiance_spectrum_dataset.ipynb
@@ -1554,13 +1554,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Use your own solar irradiance spectrum dataset\n",
     "\n",
     "To use your own solar irradiance spectrum dataset, you must \"hack\" Eradiate's solar irradiance data getter and add the path to your dataset to the list of registered paths:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -1569,7 +1569,7 @@
    "outputs": [],
    "source": [
     "from eradiate.data.solar_irradiance_spectra import _SolarIrradianceGetter\n",
-    "_SolarIrradianceGetter._PATHS[\"my_awesome_dataset\"] = \"spectra/solar_irradiance/my_awesome_dataset.nc\""
+    "_SolarIrradianceGetter.PATHS[\"my_awesome_dataset\"] = \"spectra/solar_irradiance/my_awesome_dataset.nc\""
    ]
   },
   {
