Updated heterogeneous atmospheres tutorial: use mono_double mode

--- a/notebooks/tutorials/onedim_solver_app/heterogeneous_atmospheres.ipynb
+++ b/notebooks/tutorials/onedim_solver_app/heterogeneous_atmospheres.ipynb
@@ -58,8 +58,12 @@
     "For the measures section, we will use a `toa_pplane` measure because in the following we will produce plots of the top-of-atmosphere bidirectional reflectance factor in the principal plane.\n",
     "\n",
     "There is no default for the mode.\n",
-    "Therefore, we explicitely set it to `\"mono\"` (for monochromatic) and set arbitrarily the wavelength to 579 nanometers."
-   ]
+    "Therefore, we explicitely set it to `\"mono_double\"` (for monochromatic double precision) and set arbitrarily the wavelength to 579 nanometers."
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -69,7 +73,7 @@
    "source": [
     "config = {\n",
     "    \"mode\": {\n",
-    "        \"type\": \"mono\",\n",
+    "        \"type\": \"mono_double\",\n",
     "        \"wavelength\": 579.\n",
     "    },\n",
     "    \"atmosphere\": {\n",
@@ -216,7 +220,7 @@
    "source": [
     "config = {\n",
     "    \"mode\": {\n",
-    "        \"type\": \"mono\",\n",
+    "        \"type\": \"mono_double\",\n",
     "        \"wavelength\": 579.\n",
     "    },\n",
     "    \"atmosphere\": {\n",
@@ -404,7 +408,7 @@
    "source": [
     "config = {\n",
     "    \"mode\": {\n",
-    "        \"type\": \"mono\",\n",
+    "        \"type\": \"mono_double\",\n",
     "        \"wavelength\": 1281.\n",
     "    },\n",
     "    \"atmosphere\": {\n",
@@ -517,7 +521,7 @@
    "source": [
     "config = {\n",
     "    \"mode\": {\n",
-    "        \"type\": \"mono\",\n",
+    "        \"type\": \"mono_double\",\n",
     "        \"wavelength\": 1279.\n",
     "    },\n",
     "    \"atmosphere\": {\n",
@@ -580,7 +584,7 @@
    "source": [
     "config = {\n",
     "    \"mode\": {\n",
-    "        \"type\": \"mono\",\n",
+    "        \"type\": \"mono_double\",\n",
     "        \"wavelength\": 400.\n",
     "    },\n",
     "    \"atmosphere\": {\n",
@@ -626,7 +630,7 @@
    "source": [
     "config = {\n",
     "    \"mode\": {\n",
-    "        \"type\": \"mono\",\n",
+    "        \"type\": \"mono_double\",\n",
     "        \"wavelength\": 580.\n",
     "    },\n",
     "    \"atmosphere\": {\n",
@@ -732,7 +736,7 @@
    "source": [
     "config = {\n",
     "    \"mode\": {\n",
-    "        \"type\": \"mono\",\n",
+    "        \"type\": \"mono_double\",\n",
     "        \"wavelength\": 580.\n",
     "    },\n",
     "    \"atmosphere\": {\n",
