Updated one-dim solver app tutorial: use mono_double mode

--- a/notebooks/tutorials/onedim_solver_app/onedim_solver_app.ipynb
+++ b/notebooks/tutorials/onedim_solver_app/onedim_solver_app.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "config = {\n",
     "    \"mode\": {\n",
-    "        \"type\": \"mono\",\n",
+    "        \"type\": \"mono_double\",\n",
     "        \"wavelength\": 577.\n",
     "    },\n",
     "    \"surface\": {\n",
